--- a/CaronteApp/src/app/app.component.html
+++ b/CaronteApp/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<nav>
+  <li>Inicio</li>
+  <li>Busqueda</li>
+  <li>Registro</li>
+</nav>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
