--- a/CaronteApp/src/app/components/shared/navbar/navbar.component.html
+++ b/CaronteApp/src/app/components/shared/navbar/navbar.component.html
@@ -1,3 +1,10 @@
-<p>
-  navbar works!
-</p>
+<nav>
+  <li>
+    <a [routerLink]="['/home']">Inicio</a></li>
+  <li>
+    <a [routerLink]="['/search']">Search</a>
+  </li>
+  <li>
+    <a [routerLink]="['register']">Register</a>
+  </li>
+</nav>
