--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -3,11 +3,18 @@
 <h1> CARONTE </h1>
 
 <p> Herramienta orientada a la busqueda de personas desaparecidas mediante el uso de inteligencia artificial. </p>
-<button class="bx--btn bx--btn--primary"  type="button"> Buscar </button> 
+
+ 
+<div> 
+
+    <button class="bx--btn bx--btn--primary"  type="button"> Buscar </button> 
 
 
 
-<button class="bx--btn bx--btn--primary"  type="button"> Registrar</button>
+<button class="bx--btn bx--btn--primary"  type="button"> Registrar </button>
+
+</div>
+    
 
 
 
