--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -1,8 +1,10 @@
 <h1> CARONTE </h1>
 
 <p> Herramienta orientada a la busqueda de personas desaparecidas mediante el uso de inteligencia artificial. </p>
-<button class="bx--btn bx--btn--primary"  type="button"> Buscar </button>
+<button class="xs bx--btn bx--btn--primary"  type="button"> Buscar </button>
 
+<button class="xs bx--btn bx--btn--primary"  type="button"> Registrar</button>
 
-
-<button class="bx--btn bx--btn--primary"  type="button"> Registrar</button>
+<div *ngFor="let users of users">
+  <h1>Test: {{ users.data.test }}</h1>
+</div>
