vista de registro creada

--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -1,3 +1,185 @@
-<p>
-  register works!
-</p>
+
+
+
+<div class="bx--grid">
+  <div class="bx--row">
+    <div class="bx--col-xs-6">
+      <p> Informacion persona desaparecida
+      </p>
+      <div class="bx--col-xs-10">
+      <a data-tile="clickable" class="bx--tile bx--tile--clickable" tabindex="20">Foto</a>
+      </div>
+      <div class="bx--row">
+        <div class="bx--col-xs-9">
+
+                
+
+
+          <div class="bx--offset-xs-3 bx--col-xs-3">
+
+            <label for="text-input-3" class="bx--label">Nombres </label>
+            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre de desaparecido">
+
+            
+          </div>
+
+        </div>
+      </div>
+
+      <div class="bx--row">
+        <div class="bx--col-xs-9 ">
+
+          <div class="bx--offset-xs-3 bx--col-xs-3">
+
+            <label for="text-input-3" class="bx--label">Apellidos </label>
+            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellidos de desaparecido">
+
+            
+          </div>
+
+
+        </div>
+      </div>
+
+      <div class="bx--row">
+        <div class="bx--col-xs-9 ">
+
+          <div class="bx--offset-xs-3 bx--col-xs-3">
+
+            <label for="text-input-3" class="bx--label">Edad </label>
+            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Edad de desaparecido">
+
+            
+          </div>
+          
+          <div class="bx--row">
+            <div class="bx--col-xs-9 ">
+    
+          <div class="bx--offset-xs-3 bx--col-xs-3">
+
+            <label for="text-input-3" class="bx--label">Dirección pérdida/optional </label>
+            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Dirección desaparecido">
+
+          </div>
+          </div>
+            </div>          
+
+          <div class="bx--form-item">
+                <strong class="bx--label">Foto de desaparecido</strong>
+                <p class="bx--label-description">Solo archivos .jpg y .png. <br>  Tamaño máximo 500kb .
+                </p>
+                <div class="bx--file" data-file>
+                  <label
+                    for="your-file-importer-id-here"
+                    class="bx--file-btn bx--btn bx--btn--secondary"
+                    role="button"
+                    tabindex="0">Subir foto</label>
+                  <input
+                    type="file"
+                    class="bx--file-input"
+                    id="your-file-importer-id-here"
+                    data-file-uploader
+                    data-target="[data-file-container]"
+                    multiple
+                  />
+                  <div data-file-container class="bx--file-container"></div>
+                </div>
+              </div>
+
+          
+
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="bx--col-xs-6">
+
+      <p> Informacion de contacto
+      </p>
+      <div class="bx--row">
+
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Nombres </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre del registrante">
+        </div>
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Apellidos </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellido del registrante">
+
+        </div>
+
+      </div>
+
+      <div class="bx--row">
+
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3 " class="bx--label">Ciudad </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Ciudad del registrante">
+        </div>
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Dirección </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Dirección registrante">
+
+        </div>
+
+
+      </div>
+
+      <div class="bx--row">
+
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Estado/Provincia </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Escriba su estado/provincia">
+        </div>
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Zip code </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Escriba su código ZIP">
+
+        </div>
+
+
+      </div>
+
+
+      <div class="bx--row">
+
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Phone Number </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Optional placeholder text">
+        </div>
+        <div class="bx--col-xs-3">
+
+          <label for="text-input-3" class="bx--label">Email (Optional) </label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Optional placeholder text">
+
+        </div>
+
+
+      </div>
+
+
+
+    </div>
+  </div>
+</div>
+
+
+<div class="bx--grid">
+    <div class="bx--row">
+            <div class="bx--offset-xs-5 bx--col-xs-3">  
+<button class="bx--btn bx--btn--secondary"  type="button">Limpiar</button>
+
+<button class="bx--btn bx--btn--primary"  type="button" enabled>Enviar</button>
+</div>
+
+</div>
+</div>
