--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
 <div class="content">
 
   <h1 class="brand">CARONTE</h1>
-  <p class="sub-title">Herramienta orientada a la busqueda de personas desaparecidas mediante el uso de inteligencia artificial.</p>
+  <p class="sub-title">Herramienta orientada a la búsqueda de personas desaparecidas mediante el uso de inteligencia artificial.</p>
 
   <div class="bx--row">
     <div class="bx--offset-xs-5 bx--col-xs-1">
