--- a/CaronteApp/src/app/components/home/home.component.scss
+++ b/CaronteApp/src/app/components/home/home.component.scss
@@ -8,7 +8,8 @@
 }
 
 .content {
-  position: fixed;
+  position: relative;
+  margin-top: 100px;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
