--- a/CaronteApp/src/app/components/shared/navbar/navbar.component.html
+++ b/CaronteApp/src/app/components/shared/navbar/navbar.component.html
@@ -8,8 +8,8 @@
 
     <a [routerLink]="['/home']">Inicio</a>
 
-    <a [routerLink]="['/search']">Search</a>
+    <a [routerLink]="['/search']">Buscar</a>
 
-    <a [routerLink]="['register']">Register</a>
+    <a [routerLink]="['register']">Registro</a>
 
 </nav>
