--- a/CaronteApp/src/app/components/footer/footer.component.html
+++ b/CaronteApp/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+<footer class="footer">
+  <p>Universidad Cooperativa de Colombia • Colombia - Suramérica • 2018</p>
+</footer>
