--- a/CaronteApp/src/app/components/shared/navbar/navbar.component.html
+++ b/CaronteApp/src/app/components/shared/navbar/navbar.component.html
@@ -10,6 +10,6 @@
 
     <a [routerLink]="['/search']">Buscar</a>
 
-    <a [routerLink]="['register']">Registro</a>
+    <a [routerLink]="['/register']">Registro</a>
 
 </nav>
