--- a/CaronteApp/src/app/components/shared/navbar/navbar.component.scss
+++ b/CaronteApp/src/app/components/shared/navbar/navbar.component.scss
@@ -9,11 +9,9 @@ nav a {
   float: left;
   font-size: 1.125rem;
   color: white;
-  margin: 15px;
+  padding: 15px;
   text-decoration: none;
 }
-
-nav a:hover {}
 
 #logo {
 
