--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-  <video autoplay loop id="bgvid" poster="../../../assets/img/bg.jpg">
+  <video autoplay loop id="bgvid">
 
     <source src="../../../assets/video/header-video.mp4" type="video/mp4">
 
@@ -9,18 +9,19 @@
 <div class="content">
 
   <h1 class="brand">CARONTE</h1>
-  <p class="sub-title">Herramienta orientada a la búsqueda de personas desaparecidas mediante el uso de inteligencia artificial.</p>
+  <p class="sub-title">Herramienta orientada a la búsqueda de personas desaparecidas mediante el uso de inteligencia
+    artificial.</p>
 
   <div class="bx--row">
     <div class="bx--offset-xs-5 bx--col-xs-1">
-      <button class="xs bx--btn bx--btn--primary" type="button">Buscar</button>
+      <a [routerLink]="['/search']">
+        <button class="xs bx--btn bx--btn--primary" type="button">Buscar</button>
+      </a>
     </div>
     <div class="bx--col-xs-1">
-      <button class="xs bx--btn bx--btn--primary" type="button">Registrar</button>
+      <a [routerLink]="['/register']">
+        <button class="xs bx--btn bx--btn--primary" type="button">Registrar</button>
+      </a>
     </div>
   </div>
 </div>
-
-<!-- <div *ngFor="let users of users">
-  <h1>Test: {{ users.data.test }}</h1>
-</div> -->
