--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -1,30 +1,38 @@
 
+<div>
+    <video autoplay loop id="bgvid" poster="../../../assets/img/bg.jpg">
+  
+      <source src="../../../assets/video/header-video.mp4" type="video/mp4">
+  
+    </video>
+  </div>
 
+  <div class="content">
+  <h1 class="brand">CARONTE</h1>  
+  </div>
 
 <div class="bx--grid">
   <div class="bx--row">
-    <div class="bx--col-xs-6">
+    <div class="bx--col-xs-5">
       <p> Informacion persona desaparecida
       </p>
-      <div class="bx--col-xs-10">
-      <a data-tile="clickable" class="bx--tile bx--tile--clickable" tabindex="20">Foto</a>
-      </div>
+      
+
+
       <div class="bx--row">
         <div class="bx--col-xs-9">
-
-                
 
 
           <div class="bx--offset-xs-3 bx--col-xs-3">
 
             <label for="text-input-3" class="bx--label">Nombres </label>
             <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre de desaparecido">
-
-            
+ 
           </div>
 
         </div>
       </div>
+
 
       <div class="bx--row">
         <div class="bx--col-xs-9 ">
@@ -52,6 +60,11 @@
             
           </div>
           
+
+
+          </div>
+          </div>
+
           <div class="bx--row">
             <div class="bx--col-xs-9 ">
     
@@ -64,7 +77,11 @@
           </div>
             </div>          
 
-          <div class="bx--form-item">
+            <div class="bx--row">
+                <div class="bx--col-xs-9 ">
+                    <div class=" bx--col-xs-8">
+        
+              <div class="bx--form-item">
                 <strong class="bx--label">Foto de desaparecido</strong>
                 <p class="bx--label-description">Solo archivos .jpg y .png. <br>  Tamaño máximo 500kb .
                 </p>
@@ -83,10 +100,10 @@
                     multiple
                   />
                   <div data-file-container class="bx--file-container"></div>
+                  </div>
                 </div>
               </div>
 
-          
 
         </div>
       </div>
