vista  registro actualizada (esta si)

--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -14,7 +14,7 @@
 <div class="bx--grid">
   <div class="bx--row">
     <div class="bx--col-xs-5">
-      <p> Informacion persona desaparecida
+      <p> Información persona desaparecida
       </p>
       
 
@@ -83,8 +83,8 @@
         
               <div class="bx--form-item">
                 <strong class="bx--label">Foto de desaparecido</strong>
-                <p class="bx--label-description">Solo archivos .jpg y .png. <br>  Tamaño máximo 500kb .
                 </p>
+                </h2>
                 <div class="bx--file" data-file>
                   <label
                     for="your-file-importer-id-here"
@@ -113,7 +113,7 @@
 
     <div class="bx--col-xs-6">
 
-      <p> Informacion de contacto
+      <p> Información de contacto
       </p>
       <div class="bx--row">
 
