vista registro (sincronizada)

--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -83,7 +83,7 @@
         
               <div class="bx--form-item">
                 <strong class="bx--label">Foto de desaparecido</strong>
-                </p>
+                <h2 class="bx--label-description">Solo archivos .jpg y .png. <br>  Tamaño máximo 500kb .
                 </h2>
                 <div class="bx--file" data-file>
                   <label
