actualizacion de informacion

--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -12,15 +12,15 @@
   <p class="sub-title">Herramienta orientada a la búsqueda de personas desaparecidas mediante el uso de inteligencia
     artificial.</p>
 
-  <div class="bx--row">
-    <div class="bx--offset-xs-5 bx--col-xs-1">
+  <div class="center bx--row">
+    <div class="bx--col-xs-2">
       <a [routerLink]="['/search']">
-        <button class="xs bx--btn bx--btn--primary" type="button">Buscar</button>
+        <button class="xs bx--btn bx--btn--primary" type="button">Buscar desaparecido</button>
       </a>
     </div>
-    <div class="bx--col-xs-1">
+    <div class="bx--col-xs-2">
       <a [routerLink]="['/register']">
-        <button class="xs bx--btn bx--btn--primary" type="button">Registrar</button>
+        <button class="xs bx--btn bx--btn--primary" type="button">Registrar persona</button>
       </a>
     </div>
   </div>
