--- a/CaronteApp/src/app/components/search/search.component.html
+++ b/CaronteApp/src/app/components/search/search.component.html
@@ -7,7 +7,7 @@
   <div class="bx--row">
     <div class="bx--offset-xs-2 bx--col-xs-10">
 
-        <h1>File upload</h1>
+        <h1>Subir fotografía</h1>
         <app-file-upload></app-file-upload>
 
     </div>
