--- a/CaronteApp/src/app/components/file-upload/file-upload.component.html
+++ b/CaronteApp/src/app/components/file-upload/file-upload.component.html
@@ -1,29 +1,28 @@
-<div class="bx--form-item">
-    <strong class="bx--label">Account photo</strong>
-    <p class="bx--label-description">Solo se permiten imagenes en formato .jpg y .png files.</p>
-    <div class="bx--file" data-file>
-      <label
-        for="myFile"
-        class="bx--file-btn bx--btn bx--btn--secondary"
-        role="button"
-        tabindex="0">Add files</label>
-      <input
-        type="file"
-        class="bx--file-input"
-        id="myFile"
-        data-file-uploader
-        data-target="[data-file-container]"
-        multiple
-      />
-      <div data-file-container class="bx--file-container"></div>
-    </div>
+<div class="bx--grid">
+  <div class="bx--row">
+    <div class="bx--col-xs-12 bx--col-md-6">
+      <div class="bx--form-item bottom">
+        <strong class="bx--label">Selecciona una foto desde su dispositivo o carga una dirección web (URL).</strong>
 
-    <div class="bx--form-item">
-        <label for="text-input-3" class="bx--label">Text Input label</label>
-        <input [(ngModel)]="imgUrl" id="text-input-3" type="text" class="bx--text-input" placeholder="Optional placeholder text">
-    </div>
-    <button (click)="getUrl(imgUrl)" class="bx--btn bx--btn--secondary"  type="button">Button</button>
+        <p class="bx--label-description">
+          <span class="bx--tag bx--tag--third-party">IMPORTANTE</span>
+          Solo se permiten imágenes en formato .jpg y .png</p>
+        <div class="bx--file" data-file>
+          <label for="myFile" class="bx--file-btn bx--btn bx--btn--secondary" role="button" tabindex="0">Subir foto</label>
+          <input type="file" class="bx--file-input" id="myFile" data-file-uploader data-target="[data-file-container]"
+            multiple />
+          <div data-file-container class="bx--file-container"></div>
+        </div>
 
+        <div class="bx--form-item">
+          <label for="text-input-3" class="bx--label">Subir URL</label>
+          <input [(ngModel)]="imgUrl" id="text-input-3" type="text" class="bx--text-input" placeholder="https://www.dominio.com/mi-foto.jpg">
+        </div>
+        <button (click)="getUrl(imgUrl)" class="bx--btn bx--btn--secondary" type="button">Cargar URL</button>
+      </div>
+    </div>
+    <div class="bx--col-xs-12 bx--col-md-6">
+        <pre>{{ datos | json }}</pre>
+    </div>
+  </div>
 </div>
-
-{{ datos | json }}
