--- a/CaronteApp/src/app/components/footer/footer.component.scss
+++ b/CaronteApp/src/app/components/footer/footer.component.scss
@@ -1,15 +1,15 @@
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+footer {
+  position:fixed;
+  left:0px;
+  bottom:0px;
   width: 100%;
   height: 48px;
   background-color: #272D33;
   color: white;
-  text-align: center;
   margin-top: 50px;
-}
 
-p {
-  margin-top: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
