--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -1,63 +1,77 @@
-<div class="bx--grid">
+<div class="bx--grid top">
   <div class="bx--row">
     <div class="bx--col-xs-6">
-      <p> Informacion persona desaparecida</p>
-      <div class="bx--col-xs-10">
-        <a data-tile="clickable" class="bx--tile bx--tile--clickable" tabindex="20">Foto</a>
-      </div>
-      <div class="bx--row">
-        <div class="bx--col-xs-9">
-          <div class="bx--offset-xs-3 bx--col-xs-3">
-            <label for="text-input-3" class="bx--label">Nombres </label>
-            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre de desaparecido">
-          </div>
+      <h1> Informacion persona desaparecida</h1>
+
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-20">
+          <a data-tile="clickable" class="bx--tile bx--tile--clickable" tabindex="20">Foto</a>
         </div>
       </div>
 
-      <div class="bx--row">
-        <div class="bx--col-xs-9 ">
-          <div class="bx--offset-xs-3 bx--col-xs-3">
-            <label for="text-input-3" class="bx--label">Apellidos </label>
-            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellidos de desaparecido">
-          </div>
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
+          <label for="text-input-3" class="bx--label">Nombres</label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombres de desaparecido">
         </div>
       </div>
 
-      <div class="bx--row">
-        <div class="bx--col-xs-9 ">
-          <div class="bx--offset-xs-3 bx--col-xs-3">
-            <label for="text-input-3" class="bx--label">Edad </label>
-            <input id="text-input-3" type="text" class="bx--text-input" placeholder="Edad de desaparecido">
-          </div>
-          <div class="bx--row">
-            <div class="bx--col-xs-9 ">
-              <div class="bx--offset-xs-3 bx--col-xs-3">
-                <label for="text-input-3" class="bx--label">Dirección pérdida/optional </label>
-                <input id="text-input-3" type="text" class="bx--text-input" placeholder="Dirección desaparecido">
-              </div>
-            </div>
-          </div>
-
-          <div class="bx--form-item">
-            <strong class="bx--label">Foto de desaparecido</strong>
-            <p class="bx--label-description">Solo archivos .jpg y .png. <br> Tamaño máximo 500kb .
-            </p>
-            <div class="bx--file" data-file>
-              <label for="your-file-importer-id-here" class="bx--file-btn bx--btn bx--btn--secondary" role="button"
-                tabindex="0">Subir foto</label>
-              <input type="file" class="bx--file-input" id="your-file-importer-id-here" data-file-uploader data-target="[data-file-container]"
-                multiple />
-              <div data-file-container class="bx--file-container"></div>
-            </div>
-          </div>
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
+          <label for="text-input-3" class="bx--label">Apellidos</label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellidos de desaparecido">
         </div>
       </div>
+
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
+          <label for="text-input-3" class="bx--label">Edad</label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Edad del desaparecido">
+        </div>
+      </div>
+
+      <div class="bx--form-item item-form">
+        <ul data-dropdown data-value class="bx--dropdown" tabindex="0">
+          <li class="bx--dropdown-text">
+            Dropdown label </li>
+          <svg class="bx--dropdown__arrow" width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd">
+            <path d="M10 0L5 5 0 0z"></path>
+          </svg>
+          <li>
+            <ul class="bx--dropdown-list">
+              <li data-option data-value="all" class="bx--dropdown-item">
+                <a class="bx--dropdown-link" tabindex="-1">Option 1</a>
+              </li>
+              <li data-option data-value="cloudFoundry" class="bx--dropdown-item">
+                <a class="bx--dropdown-link" tabindex="-1">Option 2</a>
+              </li>
+              <li data-option data-value="staging" class="bx--dropdown-item">
+                <a class="bx--dropdown-link" tabindex="-1">Option 3</a>
+              </li>
+              <li data-option data-value="dea" class="bx--dropdown-item">
+                <a class="bx--dropdown-link" tabindex="-1">Option 4</a>
+              </li>
+              <li data-option data-value="router" class="bx--dropdown-item">
+                <a class="bx--dropdown-link" tabindex="-1">Option 5</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
+          <label for="text-input-3" class="bx--label">Apellidos</label>
+          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre de desaparecido">
+        </div>
+      </div>
+
+
     </div>
 
     <div class="bx--col-xs-6">
+      <h1>Informacion de contacto</h1>
 
-      <p> Informacion de contacto
-      </p>
       <div class="bx--row">
 
         <div class="bx--col-xs-3">
@@ -130,17 +144,11 @@
 
     </div>
   </div>
-</div>
 
-
-<div class="bx--grid">
-  <div class="bx--row">
+  <div class="bx--row top">
     <div class="bx--offset-xs-5 bx--col-xs-3">
       <button class="bx--btn bx--btn--secondary" type="button">Limpiar</button>
-
       <button class="bx--btn bx--btn--primary" type="button" enabled>Enviar</button>
     </div>
-
   </div>
 </div>
-
