Vista registro terminada

--- a/CaronteApp/src/app/components/register/register.component.scss
+++ b/CaronteApp/src/app/components/register/register.component.scss
@@ -5,3 +5,20 @@
 .item-form {
   margin-top: 20px;
 }
+
+.header {
+  padding: 120px;
+  margin-bottom: 50px;
+  width: 100%;
+  height: 350px;
+  background-image: url('../../../assets/img/bg2.jpg');
+}
+
+.brand {
+  text-align: center;
+  font-weight: bold;
+  font-size: 5.25rem;
+  color: #41d6c3;
+}
+
+ 
