--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -1,68 +1,66 @@
+<div class="header">
+  <h1 class="brand">CARONTE</h1>
+</div>
+
+
 <div class="bx--grid top">
   <div class="bx--row">
     <div class="bx--col-xs-6">
       <h1> Informacion persona desaparecida</h1>
 
-      <div class="bx--form-item item-form">
-        <div class="bx--col-xs-20">
-          <a data-tile="clickable" class="bx--tile bx--tile--clickable" tabindex="20">Foto</a>
-        </div>
-      </div>
 
       <div class="bx--form-item item-form">
         <div class="bx--col-xs-12">
           <label for="text-input-3" class="bx--label">Nombres</label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombres de desaparecido">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Nombres de desaparecido">
         </div>
       </div>
 
       <div class="bx--form-item item-form">
         <div class="bx--col-xs-12">
           <label for="text-input-3" class="bx--label">Apellidos</label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellidos de desaparecido">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Apellidos de desaparecido">
         </div>
       </div>
 
       <div class="bx--form-item item-form">
         <div class="bx--col-xs-12">
           <label for="text-input-3" class="bx--label">Edad</label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Edad del desaparecido">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Edad del desaparecido">
+
+
         </div>
       </div>
 
       <div class="bx--form-item item-form">
-        <ul data-dropdown data-value class="bx--dropdown" tabindex="0">
-          <li class="bx--dropdown-text">
-            Dropdown label </li>
-          <svg class="bx--dropdown__arrow" width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd">
-            <path d="M10 0L5 5 0 0z"></path>
-          </svg>
-          <li>
-            <ul class="bx--dropdown-list">
-              <li data-option data-value="all" class="bx--dropdown-item">
-                <a class="bx--dropdown-link" tabindex="-1">Option 1</a>
-              </li>
-              <li data-option data-value="cloudFoundry" class="bx--dropdown-item">
-                <a class="bx--dropdown-link" tabindex="-1">Option 2</a>
-              </li>
-              <li data-option data-value="staging" class="bx--dropdown-item">
-                <a class="bx--dropdown-link" tabindex="-1">Option 3</a>
-              </li>
-              <li data-option data-value="dea" class="bx--dropdown-item">
-                <a class="bx--dropdown-link" tabindex="-1">Option 4</a>
-              </li>
-              <li data-option data-value="router" class="bx--dropdown-item">
-                <a class="bx--dropdown-link" tabindex="-1">Option 5</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+
+        <div class="bx--col-xs-12">
+
+
+
+          <label for="text-input-3" class="bx--label">Dirección pérdida </label>
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Donde fue visto/a por ultima vez">
+          
+           
+          
+        </div>
       </div>
 
       <div class="bx--form-item item-form">
         <div class="bx--col-xs-12">
-          <label for="text-input-3" class="bx--label">Apellidos</label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre de desaparecido">
+          <div class="bx--form-item">
+            <strong class="bx--label">Subir Foto</strong>
+            <p class="bx--label-description">Solo archivos con formato .jpg y .png 500kb max.</p>
+            <div class="bx--file" data-file>
+              <label for="your-file-importer-id-here" class="bx--file-btn bx--btn bx--btn--secondary" role="button"
+                tabindex="0">Subir archivo</label>
+              <input type="file" class="bx--file-input" id="your-file-importer-id-here" data-file-uploader data-target="[data-file-container]"
+                multiple />
+              <div data-file-container class="bx--file-container"></div>
+            </div>
+          </div>
+
+
         </div>
       </div>
 
@@ -70,52 +68,84 @@
     </div>
 
     <div class="bx--col-xs-6">
-      <h1>Informacion de contacto</h1>
+      <h1>Información de contacto</h1>
 
-      <div class="bx--row">
+      <div class="bx--form-item item-form">
 
-        <div class="bx--col-xs-3">
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3" class="bx--label">Nombres </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Nombre del registrante">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Nombre del registrante">
         </div>
-        <div class="bx--col-xs-3">
+      </div>
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3" class="bx--label">Apellidos </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Apellido del registrante">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Apellido del registrante">
 
         </div>
 
       </div>
 
-      <div class="bx--row">
 
-        <div class="bx--col-xs-3">
+      <div class="bx--form-item item-form">
+
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3 " class="bx--label">Ciudad </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Ciudad del registrante">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Ciudad del registrante">
         </div>
-        <div class="bx--col-xs-3">
+      </div>
+
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3" class="bx--label">Dirección </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Dirección registrante">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Dirección registrante">
 
         </div>
 
 
       </div>
 
-      <div class="bx--row">
+      <div class="bx--form-item item-form">
 
-        <div class="bx--col-xs-3">
+        <div class="bx--col-xs-12">
 
-          <label for="text-input-3" class="bx--label">Estado/Provincia </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Escriba su estado/provincia">
+          
+
+          <div class="bx--select bx--select--light">
+            <label for="select-id" class="bx--label">Estado/Provincia</label>
+            <select  id="select-id" class="bx--select-input">
+                  <option class="bx--select-option" value="" disabled selected hidden>Escoja su estado o provincia</option>
+                  
+                  
+                      <option class="bx--select-option" value="option1">Option 1</option>
+                      <option class="bx--select-option" value="option2">Option 2</option>
+                  
+                  
+            </select>
+            <svg class="bx--select__arrow" width="10" height="5" viewBox="0 0 10 5">
+              <path d="M0 0l5 4.998L10 0z" fill-rule="evenodd" />
+            </svg>
+          </div>
+
+
+
+
+
+
+
         </div>
-        <div class="bx--col-xs-3">
+      </div>
+
+      
+      <div class="bx--form-item item-form">
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3" class="bx--label">Zip code </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Escriba su código ZIP">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Escriba su código ZIP">
 
         </div>
 
@@ -123,17 +153,20 @@
       </div>
 
 
-      <div class="bx--row">
+      <div class="bx--form-item item-form">
 
-        <div class="bx--col-xs-3">
+        <div class="bx--col-xs-12">
 
           <label for="text-input-3" class="bx--label">Phone Number </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Optional placeholder text">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Optional placeholder text">
         </div>
+      </div>
+
+      <div class="bx--form-item item-form">
         <div class="bx--col-xs-3">
 
           <label for="text-input-3" class="bx--label">Email (Optional) </label>
-          <input id="text-input-3" type="text" class="bx--text-input" placeholder="Optional placeholder text">
+          <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Optional placeholder text">
 
         </div>
 
