--- a/CaronteApp/src/app/components/file-upload/file-upload.component.scss
+++ b/CaronteApp/src/app/components/file-upload/file-upload.component.scss
@@ -1,3 +1,37 @@
 div {
 margin: 20px 0px;
 }
+
+.dropzone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 300px;
+  border: 2px dashed #5596e6;
+  border-radius: 5px;
+  background: white;
+  margin: 10px 0;
+
+  &.hovering {
+      border: 2px solid #41d6c3;
+      color: #3d70b2 !important;
+  }
+}
+
+progress::-webkit-progress-value {
+  transition: width 0.1s ease;
+}
+
+.file-input {
+  border: 1px solid #ccc;
+  background: red;
+  background-color: rgba(#5596e6, 0.1);
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+button {
+margin: 0px 10px;
+}
