--- a/CaronteApp/src/app/components/file-upload/file-upload.component.html
+++ b/CaronteApp/src/app/components/file-upload/file-upload.component.html
@@ -40,19 +40,20 @@
         <div *ngIf="snapshot | async as snap">
           {{ snap.bytesTransferred | fileSize }} of {{ snap.totalBytes | fileSize }}
 
-          <button (click)="task.pause()" class="bx--btn bx--btn--secondary bx--btn--sm" [disabled]="!isActive(snap)">Pausar</button>
-          <button (click)="task.cancel()" class="bx--btn bx--btn--danger bx--btn--sm" aria-label="danger" aria-label="danger"
-            [disabled]="!isActive(snap)">Cancelar</button>
+          <div *ngIf="downloadURL | async as url">
+            <h3>Foto subida</h3>
+            <img [src]="url"><br>
+            <a [href]="url" target="_blank" rel="noopener">Descargar</a>
+          </div>
+
+          <button (click)="task.pause()" class="bx--btn bx--btn--secondary bx--btn--sm"  [disabled]="!isActive(snap)">Pausar</button>
+          <button (click)="task.cancel()" class="bx--btn bx--btn--danger bx--btn--sm" aria-label="danger" aria-label="danger" [disabled]="!isActive(snap)">Cancelar</button>
           <button (click)="task.resume()" class="bx--btn bx--btn--tertiary bx--btn--sm" [disabled]="!(snap?.state === 'paused')">Reanudar</button>
 
         </div>
-      </div>
 
-      <div *ngIf="downloadURL | async as url" class="bx--form-item">
-        <button (click)="sendUrl(url)" class="bx--btn bx--btn--secondary" type="button">Cargar URL</button>
-      </div>
+        <!-- END DROP ZONE -->
 
-      <div *ngIf="downloadURL == undefined">
         <div class="bx--form-item">
           <label for="text-input-3" class="bx--label">Subir URL</label>
           <input [(ngModel)]="imgUrl" id="text-input-3" type="text" class="bx--text-input" placeholder="https://www.dominio.com/mi-foto.jpg">
@@ -63,10 +64,7 @@
     </div>
 
     <div class="bx--col-xs-12 bx--col-md-6">
-      <div *ngIf="dataApi != undefined">
-        <!-- <app-card></app-card> -->
-        <app-card [dataApi]="dataApi"></app-card>
-      </div>
+      <pre>{{ datos | json }}</pre>
     </div>
 
   </div>
