Correccion del footer

--- a/CaronteApp/src/app/components/card/card.component.html
+++ b/CaronteApp/src/app/components/card/card.component.html
@@ -1,6 +1,5 @@
 <div class="card-body my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-    <img src="{{ dataApi.imgUrl }}" class="d-block w-full">
-
+    <img src="{{ dataApi.imgUrl }}" class="d-block w-full height">
     <div class="px-2 py-2">
       <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
         Características detectadas
