--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="content">
 
   <h1 class="brand">CARONTE</h1>
-  <p class="sub-title">Herramienta orientada a la búsqueda de personas desaparecidas mediante el uso de inteligencia
+  <p class="sub-title">Herramienta de búsqueda de personas desaparecidas mediante el uso de inteligencia
     artificial.</p>
 
   <div class="center bx--row">
@@ -23,3 +23,4 @@
     </div>
   </div>
 </div>
+<app-footer id="fixed"></app-footer>
