--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -12,7 +12,8 @@
 <div class="content">
 
   <h1 class="brand">CARONTE</h1>
-  <p class="sub-title">Herramienta orientada a la busqueda de personas desaparecidas mediante el uso de inteligencia artificial.</p>
+  <p class="sub-title">Herramienta de búsqueda de personas desaparecidas mediante el uso de inteligencia
+    artificial.</p>
 
   <div class="center bx--row">
     <div class="bx--col-xs-2">
@@ -27,6 +28,7 @@
     </div>
   </div>
 </div>
+<app-footer id="fixed"></app-footer>
 
 <!-- <div *ngFor="let users of users">
   <h1>Test: {{ users.data.test }}</h1>
