Vista registro final

--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -40,9 +40,9 @@
 
           <label for="text-input-3" class="bx--label">Dirección pérdida </label>
           <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Donde fue visto/a por ultima vez">
-          
-           
-          
+
+
+
         </div>
       </div>
 
@@ -113,18 +113,36 @@
 
         <div class="bx--col-xs-12">
 
-          
+
 
           <div class="bx--select bx--select--light">
             <label for="select-id" class="bx--label">Estado/Provincia</label>
-            <select  id="select-id" class="bx--select-input">
-                  <option class="bx--select-option" value="" disabled selected hidden>Escoja su estado o provincia</option>
-                  
-                  
-                      <option class="bx--select-option" value="option1">Option 1</option>
-                      <option class="bx--select-option" value="option2">Option 2</option>
-                  
-                  
+            <select id="select-id" class="bx--select-input">
+              <option class="bx--select-option" value="" disabled selected hidden>Escoja su estado o provincia</option>
+
+
+              <option class="bx--select-option" value="Argentina">Argentina </option>
+              <option class="bx--select-option" value="Bolivia">Bolivia </option>
+              <option class="bx--select-option" value="Brasil">Brasil </option>
+              <option class="bx--select-option" value="Chile">Chile </option>
+              <option class="bx--select-option" value="Colombia"> Colombia </option>
+              <option class="bx--select-option" value="Costa Rica">Costa Rica </option>
+              <option class="bx--select-option" value="Cuba">Cuba</option>
+              <option class="bx--select-option" value="Ecuador">Ecuador </option>
+              <option class="bx--select-option" value="El Salvador">El Salvador </option>
+              <option class="bx--select-option" value="Guatemala">Guatemala </option>
+              <option class="bx--select-option" value="Honduras">Honduras</option>
+              <option class="bx--select-option" value="México">México </option>
+              <option class="bx--select-option" value="Nicaragua">Nicaragua</option>
+              <option class="bx--select-option" value="Panamá">Panamá </option>
+              <option class="bx--select-option" value="Paraguay">Paraguay</option>
+              <option class="bx--select-option" value="Puerto Rico">Puerto Rico </option>
+              <option class="bx--select-option" value="Perú">Perú </option>
+              <option class="bx--select-option" value="República Domminicana">República Domminicana </option>
+              <option class="bx--select-option" value="Uruguay">Uruguay </option>
+              <option class="bx--select-option" value="Venezuela">Venezuela </option>
+
+
             </select>
             <svg class="bx--select__arrow" width="10" height="5" viewBox="0 0 10 5">
               <path d="M0 0l5 4.998L10 0z" fill-rule="evenodd" />
@@ -133,18 +151,14 @@
 
 
 
-
-
-
-
         </div>
       </div>
 
-      
+
       <div class="bx--form-item item-form">
         <div class="bx--col-xs-12">
 
-          <label for="text-input-3" class="bx--label">Zip code </label>
+          <label for="text-input-3" class="bx--label">Código Zip </label>
           <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Escriba su código ZIP">
 
         </div>
@@ -157,7 +171,7 @@
 
         <div class="bx--col-xs-12">
 
-          <label for="text-input-3" class="bx--label">Phone Number </label>
+          <label for="text-input-3" class="bx--label">Número telefónico </label>
           <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Optional placeholder text">
         </div>
       </div>
